--- a/site/composer.json
+++ b/site/composer.json
@@ -33,7 +33,7 @@
     },
     {
       "type": "composer",
-      "url": "https://composer.deliciousbrains.com/MIGRATEDB_PRO_KEY"
+      "url": "https://composer.deliciousbrains.com/D4A7ACB70D1F4E28E3BF5453A3FC8564"
     }
   ],
   "require": {
