--- a/site/composer.json
+++ b/site/composer.json
@@ -46,6 +46,10 @@
     {
       "type": "vcs",
       "url": "git@github.com:13milliseconds/salient-portfolio.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:13milliseconds/salient-nectar-slider.git"
     }
   ],
   "require": {
@@ -58,6 +62,7 @@
     "13milliseconds/js_composer_salient": "dev-master",
     "13milliseconds/salient-core": "dev-master",
     "13milliseconds/salient-portfolio": "dev-master",
+    "13milliseconds/salient-nectar-slider": "dev-master",
     "roots/wp-password-bcrypt": "1.0.0",
     "deliciousbrains-plugin/wp-migrate-db-pro": "^1.8.4",
     "deliciousbrains-plugin/wp-migrate-db-pro-media-files": "*",
