--- a/site/composer.json
+++ b/site/composer.json
@@ -74,7 +74,8 @@
     "wpackagist-plugin/wp-fastest-cache":"^0.8.9.3",
     "wpackagist-plugin/ewww-image-optimizer":"^4.7.4",
     "wpackagist-plugin/wp-maintenance-mode":"^2.2.4",
-    "wpackagist-plugin/duplicate-post":"^3.2.2"
+    "wpackagist-plugin/duplicate-post":"^3.2.2",
+    "wpackagist-plugin/intuitive-custom-post-order":"^3.1.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
