--- a/trellis/group_vars/all/security.yml
+++ b/trellis/group_vars/all/security.yml
@@ -13,5 +13,9 @@ ferm_input_list:
 # Documentation: https://roots.io/trellis/docs/security/
 # If sshd_permit_root_login: false, admin_user must be in 'users' (`group_vars/all/users.yml`) with sudo group
 # and in 'vault_users' (`group_vars/staging/vault.yml`, `group_vars/production/vault.yml`)
-sshd_permit_root_login: false
+sshd_permit_root_login: true
 sshd_password_authentication: false
+
+ip_whitelist:
+  - 127.0.0.0/8
+  - "{{ ipify_public_ip | default('') }}"
