--- a/trellis/group_vars/production/wordpress_sites.yml
+++ b/trellis/group_vars/production/wordpress_sites.yml
@@ -14,6 +14,7 @@ wordpress_sites:
       enabled: false
     ssl:
       enabled: true
-      provider: letsencrypt
+      stapling_enabled: false
+      provider: cloudflare-origin-ca
     cache:
       enabled: true
